# Afodabohousing

./: .env  .gitignore  README.md  docker-compose.yml  index.html  package-lock.json  package.json  pnpm-lock.yaml  render.yaml  tailwind.config.ts  vite.config.ts  vite.config.ts.timestamp-1778665181595-224e411c1014c8.mjs
MobileAppAfodabo_v2/: app.json  package-lock.json  package.json  rork.json
afodabo-housing-mobile/: .env.example  .eslintrc.js  .pre-commit-config.yaml  AGENTS.md  README.md  app.json  eas.json  jest.config.js  package-lock.json  package.json  pnpm-lock.yaml  render.backend.yaml  tsconfig.json
backend/: .coverage  .dockerignore  .env.example  Dockerfile  README.md  config.py  main.py  pyproject.toml  requirements.txt
backend/dependencies/: __init__.py  auth.py  database.py
backend/migrations/: 001_initial_schema.sql  002_properties_schema.sql  003_fix_admin_role.sql  004_messages.sql  005_rental_units.sql  006_tenancies.sql  007_user_roles.sql  008_fix_enums_and_functions.sql  009_property_contact_fields.sql  011_boosts.sql  011_restrict_property_types.sql  012_subscriptions.sql  012_tenancy_expiry_notifications.sql  013_add_photo_url.sql  014_agreement_consents.sql  015_subscriptions.sql  016_fix_zip_code_nullable.sql  016_push_tokens.sql  017_lease_unit_label.sql  018_renewal_history.sql  019_agreement_versions.sql  019_fix_payments_status_constraint.sql  020_allow_agreement_status_updates.sql
backend/models/: __init__.py  agreement.py  agreements.py  bookmark.py  boost.py  lease.py  maintenance_request.py  message.py  payment.py  profile.py  property.py  renewal_request.py  rental_unit.py  subscription.py  tenant.py  terms.py  tracking.py
backend/routers/: __init__.py  admin.py  agreement_generator.py  agreements.py  auth.py  bookmarks.py  boosts.py  exports.py  forex.py  leases.py  maintenance_requests.py  managers.py  messages.py  notifications.py  payments.py  phone_auth.py  properties.py  rental_units.py  reports.py  subscriptions.py  tenants.py  terms.py  tracking.py  uploads.py  webhooks.py
backend/scripts/: apply_sql_migration.py  generate_openapi.py  load_test_rate_limit.py
backend/services/: __init__.py  agreement_generator.py  agreements.py  auth.py  base.py  boost.py  crud.py  forex.py  notifications.py  nylonpay.py  observability.py  receipts.py  scheduler.py  subscription.py  subscriptions.py  tracking.py
backend/tests/: conftest.py  test_api.py  test_boosts_integration.py  test_middleware_and_health.py  test_payments_integration.py  test_rate_limit.py  test_scheduler.py  test_subscriptions_integration.py  test_webhooks.py
docs/: README.md  analytics-design.md  mobile-implementation.md  super-admin-manager-creation-analytics.md  tenant-dashboard-design.md
mobile/: app.config.js  app.json  (+3 more)
mobile-rebuild/: package-lock.json
(+517 files in other folders)
