[project]
name = "rental-management-api"
version = "0.1.0"
description = "FastAPI backend for rental management app"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "supabase>=2.3.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart",
    "email-validator>=2.1.0",
    "httpx>=0.26.0",
    "sentry-sdk>=2.0.0",
    "apscheduler>=3.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "backend.dependencies.auth",
    "backend.routers.auth",
    "backend.routers.leases",
    "backend.routers.maintenance_requests",
    "backend.routers.messages",
    "backend.routers.payments",
    "backend.routers.properties",
    "backend.routers.rental_units",
    "backend.routers.tenants",
    "backend.routers.uploads",
    "backend.routers.webhooks",
    "backend.services.crud",
    "backend.tests.conftest",
]
ignore_errors = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
